# lumierize

./: ProjectHome.md  README.md
LF_SCRIPTS/: LF_analyze_simulations.py  LF_clean.py  LF_computeSTY_Mag.csh  LF_computeSTY_errMag.csh  LF_computeSTY_errMag_unstable.csh  LF_computeSTY_gmz_M_wC.csh  LF_computeSTY_wC_Mag.csh  LF_computeSTY_wC_errColor.csh  LF_generate_catalog_Mag.csh  LF_generate_catalog_Mag_wC.csh  LF_get_object_density_wC.csh  LF_launch_simulations.py  LF_launch_single_STY.py  LF_launch_single_STY_wC_errColor.py  LF_launch_single_VVmax.py  LF_launch_single_catalog.py  LF_launch_single_simulation_Mag.py
lumierize/tags/opera-1.0/C_SOURCE/: BuhoFits_bootes.c  ChangePixType.c  Cosmo.c  ExtractSpec.c  Pix2wcs.c  PlateAstrom.c  Select.c  SurveyReg_sf.c  TestDeriv.c
lumierize/tags/opera-1.0/Par/: CreateSky.par  PlateAstrom.par
lumierize/trunk/: Makefile  Makefile.am  autogen.sh  compilon_DigitalUnix_sample  compilon_Linux_sample  compilon_RedHat6.0_sample  configure.ac
lumierize/trunk/C_SOURCE/: Average_spec.c  CalibrateDispersion.c  CheckError_sqrt.c  CheckIMF.c  CheckPoisson.c  CombineSpec.c  CopyHeader.c  CreateUSNOfromXYCat.c  Createindexfromdisper.c  CrossCat.c  EmissionLines.c  GenerateIMF.c  GraphTable.c  HistTable.c  ImCopy.c  Imstat.c  LumFunc_GOYA.c  ManageSur.c  Nbody.c  NumberCounts.c  PlotBuho.c  PlotCat.c  PlotSpec.c  Prereduce_ds.c  Prereduce_ds_fix.c  QuickFot.c  ReadUSNO.c  Response.c  SearchLine_old.c  Simula_narrow.c  SkyEmission.c  SpecCopy.c  StarBurst.c  StatTable.c  TestBayes.c  TestCosmo.c  converpar.c  imwcs.c
lumierize/trunk/Par/: ExtractSpec.par  SearchLine.par  Select.par  StarBurst.par
lumierize/trunk/liblumiere/: Amoe_Ini.c  Amoe_Ini_d.c  Amoe_NR.c  Amoe_NR_d.c  Amoeba.c  Amoeba_d.c  Bnldev.c  Constdev.c  ElipPar_d.c  Expdev.c  FileNLin.c  Gasdev.c  Histdev.c  Histfunc.c  Lagr2_d.c  LeeWord.c  MCElipN_d.c  MCElip_d.c  MLA_STY_L.c  MLA_STY_M.c  MLA_STY_M2.c  MLA_STY_e_s_p_f_PO.c  MLA_STY_g_p_L.c  MLA_STY_g_p_M.c  MLA_STY_gc_p_M_wC.c  MLA_STY_gf_p_L.c  MLA_STY_gm_p_M.c  MLA_STY_gmz_p_f_M_wC.c  MLA_STY_gz_p_L.c  MLA_STY_p_L.c  MLA_STY_p_L_test.c  MLA_STY_p_M.c  MLA_STY_p_M_wC.c  MLA_STY_p_PO.c  MLA_STY_p_f_L.c  MLA_STY_p_f_M.c  MLA_STY_p_f_PO.c  MLA_STY_s_p_f_PO.c  MLA_SWML_L.c  MLA_SWML_M.c  (+101 more)
lumierize/trunk/modulos/: Amoe_NR_d.c  Amoeba.c  Amoeba_d.c  Disper.c  Ecu2Cart.c  Ecu2Plac.c  ElipPar_d.c  GAMinFunc.c  Histfunc.c  I_Intp1p.c  Lagr2.c  Lagr2_d.c  MCElipN_d.c  MCLine.c  MCP1.c  MCP1Weight_err.c  MCP1_err.c  MCP1_err_d.c  MLA_STY_L.c  MLA_STY_e_s_p_f_PO.c  MLA_STY_g_p_M.c  MLA_STY_gc_p_M_wC.c  MLA_STY_gmz_p_f_M_wC.c  MLA_STY_p_L.c  MLA_STY_p_L_test.c  MLA_STY_p_f_PO.c  MLA_STY_s_p_f_PO.c  MLA_SWML_L.c  MLA_SWML_g_M.c  MLA_SWML_gf_p_L.c  MLA_SWML_p_L.c  MLA_g_g_f_d.c  MLA_g_n_f_d.c  MLA_h_g_f_d.c  MLA_rho.c  ML_g_g.c  ML_g_g_corr.c  MPrec.c  Plac2Ecu.c  PlateCtes_3.c  (+63 more)
lumierize/trunk/src/: ComputeDistribution.c  LumFunc.c  Makefile.am
tags/dabreu20090512/OPERA/: compilon_Solaris_sample  compilon_SunOS_sample
tags/opera-1_0/OPERA/: install.csh
tags/start/LF_SCRIPTS/: LF_analyze_simulations.py  LF_analyze_simulations.py.v1  LF_clean.py  LF_computeSTY_gmz_M_wC.csh  LF_computeSTY_wC_Mag.csh  LF_computeVVmax_Mag.csh  LF_generate_catalog_Mag.csh  LF_get_object_density_wC.csh  LF_harvester.py  LF_harvester.py.v1  LF_launch_single_STY_errMag.py  LF_launch_single_STY_wC.py  LF_status.py  README.txt
trunk/LF_SCRIPTS/: LF_analyze_simulations.py  LF_computeSTY_Mag.csh  LF_computeSTY_Mag_nop.csh  LF_computeSTY_errMag.csh  LF_computeSTY_gmz_M_wC.csh  LF_computeSTY_wC_Mag.csh  LF_computeVVmax_Mag.csh  LF_generate_catalog_Mag_wC.csh  LF_get_object_density.csh  LF_harvester.py  LF_launch_simulations.py  LF_launch_single_STY.py  LF_launch_single_STY_errMag.py  LF_launch_single_STY_wC.py  LF_launch_single_STY_wC_errColor.py  LF_launch_single_VVmax.py  LF_launch_single_catalog.py  LF_launch_single_simulation_Mag.py  LF_status.py  gmon.out
trunk/OPERA/C_SOURCE/: CheckCounts.c  ComputeDistribution.c  LumFunc_GOYA.c  SelFunc.c  SimulaOP_field.c  SurveyReg_sf.c  calcz.c
trunk/OPERA/include/: modulos.h
trunk/OPERA/modulos/: Bottleneck.c  Gasdev.c  MLA_STY_L.c  MLA_STY_M.c  MLA_STY_M2.c  MLA_STY_e_s_p_f_PO.c  MLA_STY_g_p_L.c  MLA_STY_g_p_M.c  MLA_STY_gc_p_M_wC.c  MLA_STY_gf_p_L.c  MLA_STY_gm_p_M.c  MLA_STY_gmz_p_f_M_wC.c  MLA_STY_gz_p_L.c  MLA_STY_p_L_test.c  MLA_STY_p_M.c  MLA_STY_p_M_wC.c  MLA_STY_p_f_L.c  MLA_STY_p_f_M.c  MLA_STY_p_f_PO.c  MLA_STY_s_p_f_PO.c  MLA_SWML_L.c  MLA_SWML_g_p_L.c  MLA_SWML_g_p_f_L.c  MLA_SWML_gf_p_L.c  MLA_SWML_gm_p_L.c  MLA_SWML_p_L.c  MLA_SWML_p_M.c  MLA_ff_gg_d.c  MLA_hh_gg_d.c  MLGA_STY_p_L.c  MinMax_l.c  StCovar_d.c  StHisto_d.c  StWeightMedia.c  Tridiag.c  VVmax_L.c  VVmax_M.c  cosmology.c  cpgrainbow.c  f_clrh.c  (+12 more)
(+139 files in other folders)
